Adding Images to User post